<resources>
    <string name="app_name">Doctor Direct</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title1">Search for doctors</string>
    <string name="subtitle1">You can find any doctor and get help from them</string>
    <string name="title3">Make an appointment</string>
    <string name="subtitle3">Make an appointment in advance to see your doctor and don\'t wait too long</string>
    <string name="title2">Online consultation</string>
    <string name="subtitle2">You can consult doctors on the platform without leaving home</string>
    <string name="splash_logo">splash logo</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="appointment">Appointment</string>
    <string name="add_doctor">Add doctor</string>
    <string name="qr_code">QR Code</string>
    <string name="find_your_specialist">Find your Specialist</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="about">About</string>
    <string name="speciality">Speciality</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="available_time">Available time</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="appointments">Appointments</string>
    <string name="todo">TODO</string>
    <string name="availability">Availability</string>
    <string name="delete">Delete</string>
    <string name="diagnosis">Diagnosis</string>
    <string name="recipe">Recipe</string>
    <string name="conclusion">Conclusion</string>
    <string name="arrival_date">Arrival date</string>
    <string name="make_appointment">Make appointment</string>
    <string name="your_appointments">Your appointments</string>
    <string name="doctors">Doctors</string>
    <string name="welcome_back">Welcome back</string>
    <string name="glad_to_meet_you_again_please_login_to_use_the_app">Glad to meet you again!, please login to use the app.</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="booking_appointment">Booking Appointment</string>
    <string name="schedule">Schedule</string>
    <string name="arrival_time">Arrival time</string>
    <string name="aim">Aim</string>
    <string name="brief_purpose">Brief purpose</string>
    <string name="send">Send</string>
    <string name="success">Success</string>
    <string name="your_appointment_has_been_sent">Your appointment has been sent</string>
    <string name="start">Start</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="create_an_account">Create an account</string>
    <string name="please_type_full_information_bellow_and_we_can_create_your_account">Please type full information bellow and we can create your account</string>
    <string name="birth_date">Birth date</string>
    <string name="reject">Reject</string>
    <string name="accept">Accept</string>
    <string name="appointment_has_been_accepted">Appointment has been accepted</string>
    <string name="search">Search…</string>
    <string name="doctors_list">Doctors list</string>
    <string name="appointment_date">Appointment date</string>
    <string name="upcoming">Upcoming</string>
    <string name="doctor">Doctor</string>
    <string name="patient">Patient</string>
    <string name="user_not_found">User not found</string>
    <string name="permission_info">This application cannot work without permission</string>
    <string name="accepted">Accepted</string>
    <string name="rejected">Rejected</string>
    <string name="available">Available</string>
    <string name="unavailable">Unavailable</string>
    <string name="doctor_added">Doctor has been added</string>
    <string name="doctor_deleted">Doctor has been deleted</string>
    <string name="sent_in">Sent in \t</string>
    <string name="appointment_has_been_rejected">Appointment has been rejected</string>
    <string name="hello">Hello \t</string>
    <string name="your_details_updated">Your details have been updated</string>
    <string name="you_cant_change_username">You can not change username</string>
    <string name="retry">Retry</string>
    <string name="not_qr_code">This is not Appointment QR code</string>
    <string name="enter_first_name">Please enter your first name</string>
    <string name="enter_last_name">Please enter last name</string>
    <string name="enter_username">Username must be at least 3 characters long</string>
    <string name="enter_email">Please enter your email correctly</string>
    <string name="enter_password">Password must be at least 6 characters long</string>
    <string name="enter_time">Please enter available time</string>
    <string name="enter_spec">Please enter speciality</string>
    <string name="enter_bio">Please enter bio</string>
    <string name="enter_image">Please pick your image</string>
    <string name="appointment_not_found">Appointment not found</string>
    <string name="assign">Assign</string>
    <string name="profile">Profile</string>
    <string name="availability_at_work">Availability at work</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="russian">Russian</string>
    <string name="home">Home</string>
    <string name="sign_out">Sign Out</string>
    <string name="empty">Empty</string>
    <string name="user_details_not_found">User details not found</string>
    <string name="doctor_not_available">The doctor is not available yet</string>
    <string name="full_name">Full name</string>
    <string name="gender">Gender</string>
    <string name="user_appointments">User appointments</string>
    <string name="general_doctor">General doctor</string>
    <string name="neurologist">Neurologist</string>
    <string name="dentist">Dentist</string>
    <string name="therapist">Therapist</string>
    <string name="surgeon">Surgeon</string>
    <string name="orthopedic_doctor">Orthopedic doctor</string>
    <string name="gynecologist">Gynecologist</string>
    <string name="endocrinologist">Endocrinologist</string>
    <string name="user_details">User details</string>
</resources>