<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/isAvailable"
        android:checkable="true"
        android:icon="@drawable/doctor"
        android:iconTint="@color/grey"
        android:title="@string/availability_at_work"
        android:visible="false" />
    <item
        android:id="@+id/language"
        android:icon="@drawable/language"
        android:iconTint="@color/grey"
        android:title="@string/language">
        <menu>
            <item
                android:id="@+id/english"
                android:title="@string/english" />
            <item
                android:id="@+id/russian"
                android:title="@string/russian" />
        </menu>
    </item>


    <item
        android:id="@+id/signOut"
        android:icon="@drawable/exit"
        android:iconTint="@color/grey"
        android:title="@string/sign_out" />

</menu>