<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/text_booking"
        style="@style/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/add_doctor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@id/add_btn"
        app:layout_constraintTop_toBottomOf="@id/text_booking">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/image_iv"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="16dp"
                android:scaleType="centerCrop"
                android:src="@drawable/image_placeholder"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <EditText
                android:id="@+id/firstname_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/white_corner16"
                android:fontFamily="@font/inter_regular"
                android:hint="@string/first_name"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="1"
                android:paddingHorizontal="16dp"
                android:paddingVertical="12dp"
                android:textColor="@color/grey"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/image_iv" />


            <EditText
                android:id="@+id/lastname_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/white_corner16"
                android:fontFamily="@font/inter_regular"
                android:hint="@string/last_name"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="1"
                android:paddingHorizontal="16dp"
                android:paddingVertical="12dp"
                android:textColor="@color/grey"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/firstname_tv" />


            <EditText
                android:id="@+id/about_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/white_corner16"
                android:fontFamily="@font/inter_regular"
                android:hint="@string/about"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="1"
                android:paddingHorizontal="16dp"
                android:paddingVertical="12dp"
                android:textColor="@color/grey"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lastname_tv" />


            <TextView
                android:id="@+id/speciality_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/white_corner16"
                android:fontFamily="@font/inter_regular"
                android:hint="@string/speciality"
                android:maxLines="1"
                android:paddingHorizontal="16dp"
                android:paddingVertical="12dp"
                android:textColor="@color/grey"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/about_tv" />


            <EditText
                android:id="@+id/username_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/white_corner16"
                android:fontFamily="@font/inter_regular"
                android:hint="@string/username"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="1"
                android:paddingHorizontal="16dp"
                android:paddingVertical="12dp"
                android:textColor="@color/grey"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/speciality_tv" />


            <EditText
                android:id="@+id/email_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/white_corner16"
                android:fontFamily="@font/inter_regular"
                android:hint="@string/email"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="1"
                android:paddingHorizontal="16dp"
                android:paddingVertical="12dp"
                android:textColor="@color/grey"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/username_tv" />


            <EditText
                android:id="@+id/password_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@drawable/white_corner16"
                android:fontFamily="@font/inter_regular"
                android:hint="@string/password"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:maxLines="1"
                android:paddingHorizontal="16dp"
                android:paddingVertical="12dp"
                android:textColor="@color/grey"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email_tv" />

            <TextView
                android:id="@+id/available_time_ttv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@drawable/white_corner16"
                android:fontFamily="@font/inter_regular"
                android:hint="@string/available_time"
                android:maxLines="1"
                android:paddingHorizontal="16dp"
                android:paddingVertical="12dp"
                android:textColor="@color/grey"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password_tv" />

            <RadioGroup
                android:id="@+id/state_rg"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/available_time_ttv">

                <RadioButton
                    android:id="@+id/male_rb"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:background="@drawable/left_button_selector"
                    android:button="@null"
                    android:checked="true"
                    android:fontFamily="@font/inter_medium"
                    android:gravity="center"
                    android:text="@string/male"
                    android:textColor="@drawable/radio_button_text_color" />

                <RadioButton
                    android:id="@+id/female_rb"
                    android:layout_width="0dp"
                    android:layout_height="40dp"

                    android:layout_weight="1"
                    android:background="@drawable/right_button_selector"
                    android:button="@null"
                    android:fontFamily="@font/inter_medium"
                    android:gravity="center"
                    android:text="@string/female"
                    android:textColor="@drawable/radio_button_text_color" />

            </RadioGroup>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


    <ProgressBar
        android:id="@+id/loading_pb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/blue"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/add_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/blue_corner16"
        android:fontFamily="@font/inter_medium"
        android:text="@string/assign"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>